Fix for FAQ and FAQ styling

--- a/html/data/faq.html
+++ b/html/data/faq.html
@@ -57,7 +57,7 @@
 		Double count refers to multiple different product touches per individual. For example, one person may own a Philips Green LED lamp and a Philips Senseo Viva Café Eco, and undergo treatment by means of Philips Healthcare equipment; this person will only be counted once in the model instead of three times.
 		</p>
 		<p>
-		Double-count elimination is based on probability theory, i.e. the statistical likelihood of one individual having multiple product touches. For more information, refer to the methodology document that can be found on <span class="mimiclink" onclick="loadUrlInBrowser('http://www.annualreport2012.philips.com/downloads/pdf/Methodology_for_calculating_lives%20improved_2012.pdf')">the Annual Report website</span>.
+		Double-count elimination is based on probability theory, i.e. the statistical likelihood of one individual having multiple product touches. For more information, refer to the methodology document that can be found on <span class="mimiclink" onclick="loadUrlInBrowser('http://www.philips.com/b-dam/corporate/about-philips/sustainability/downloads/ecovision-methodologies/Methodology-for-calculating-Lives-Improved-2016.pdf')">the Annual Report website</span>.
 		</p>
 	</div>
 </div>
@@ -75,19 +75,7 @@
 </div>
 
 <div class="faq_wrapper">
-	<div class="faq_header" id="faq7" onclick="objExplain.showfaqcontent(this, 'faq7content')"><div class="number">7.</div><div class="text">How do the sliders work?</div></div>
-	<div class="faq_content" id="faq7content">
-		<p>
-    The simulator always calculates Lives Improved for the next quarter-end. The app uses actual year-to-date data and supplements this with last year's sales data to determine trends and extrapolate data for the next quarter.
-		</p>
-		<p>
-		By moving the sliders you can see what happens to the Lives Improved when sales increase or decrease, or when the Green sales percentage increases or decreases. 
-		</p>
-	</div>
-</div>
-
-<div class="faq_wrapper">
-	<div class="faq_header" id="faq8" onclick="objExplain.showfaqcontent(this, 'faq8content')"><div class="number">8.</div><div class="text">When will the latest sales data become available?</div></div>
+	<div class="faq_header" id="faq8" onclick="objExplain.showfaqcontent(this, 'faq8content')"><div class="number">7.</div><div class="text">When will the latest sales data become available?</div></div>
 	<div class="faq_content" id="faq8content">
 		<p>
     The data in the app is updated on a quarterly basis. This is done in the week following the offical press release of financial results.
@@ -96,7 +84,7 @@
 </div>
 
 <div class="faq_wrapper">
-	<div class="faq_header" id="faq9" onclick="objExplain.showfaqcontent(this, 'faq9content')"><div class="number">9.</div><div class="text">How will I know when new data is available?</div></div>
+	<div class="faq_header" id="faq9" onclick="objExplain.showfaqcontent(this, 'faq9content')"><div class="number">8.</div><div class="text">How will I know when new data is available?</div></div>
 	<div class="faq_content" id="faq9content">
 		<p>
 		When new data is available and you open the app, a message will tell you that the data has been updated.
@@ -106,7 +94,7 @@
 
 
 <div class="faq_wrapper">
-	<div class="faq_header" id="faq10" onclick="objExplain.showfaqcontent(this, 'faq10content')"><div class="number">10.</div><div class="text">Who can I contact if I have any questions or remarks?</div></div>
+	<div class="faq_header" id="faq10" onclick="objExplain.showfaqcontent(this, 'faq10content')"><div class="number">9.</div><div class="text">Who can I contact if I have any questions or remarks?</div></div>
 	<div class="faq_content" id="faq10content">
 		<p>
 		You can contact Group Sustainability with any questions you may have. Please send an e-mail to <a href="mailto:siebe.trompert@philips.com">siebe.trompert@philips.com</a>.
