Removed "Show help overlays" from the FAQ page

--- a/html/data/faq.html
+++ b/html/data/faq.html
@@ -1,8 +1,11 @@
-﻿<div class="faq_wrapper">
+﻿<!--
+<div class="faq_wrapper">
 	<div class="faq_header">
 		<div class="mimiclink" onclick="objPanelInfo.removelocalstorageitems();">Show help overlays</div>
 	</div>
-</div>
+</div>  
+-->
+
 <h4>FAQ</h4>
 <div class="faq_wrapper">
 	<div class="faq_header" id="faq1" onclick="objExplain.showfaqcontent(this, 'faq1content')"><div class="number">1.</div><div class="text">What do we mean by 'Lives Improved'?</div></div>
@@ -57,7 +60,7 @@
 		Double count refers to multiple different product touches per individual. For example, one person may own a Philips Green LED lamp and a Philips Senseo Viva Café Eco, and undergo treatment by means of Philips Healthcare equipment; this person will only be counted once in the model instead of three times.
 		</p>
 		<p>
-		Double-count elimination is based on probability theory, i.e. the statistical likelihood of one individual having multiple product touches. For more information, refer to the methodology document that can be found on <span class="mimiclink" onclick="loadUrlInBrowser('http://www.philips.com/b-dam/corporate/about-philips/sustainability/downloads/ecovision-methodologies/Methodology-for-calculating-Lives-Improved-2016.pdf')">the Annual Report website</span>.
+		Double-count elimination is based on probability theory, i.e. the statistical likelihood of one individual having multiple product touches. For more information, refer to the methodology document that can be found on <span class="mimiclink" onclick="loadUrlInBrowser('http://www.philips.com/b-dam/corporate/about-philips/sustainability/downloads/ecovision-methodologies/Methodology-for-calculating-Lives-Improved-2016.pdf')">the Philips Sustainability website</span>.
 		</p>
 	</div>
 </div>
