--- a/html/data/body_content.html
+++ b/html/data/body_content.html
@@ -1,240 +1,209 @@
 <div id="app_panel" class="panel full">
-  <div id="title_bar">
-    <div id="btn_back" onclick="objHeader.btnbackclick();"></div>
-    <div id="info">
-      <div class="info_wrapper">
-        <div id="region_name" onclick="reloadApp();"></div>
-        <div id="filter_breadcrumb_wrapper">
-          <div id="">
-            <span id="filter_breadcrumb"></span>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div id="toggle_favourite" onclick="objHeader.togglefavourite(this);"></div>
-  </div>
-  <div id="app_wrapper">
-    <div id="map">
-      <div id="main_wrapper" style="opacity: 1; display: block">
-        <div id="holder_1000" style="opactiy: 1">
-        </div>
-      </div>
-    </div>
+	<div id="title_bar">
+		<div id="btn_back" onclick="objHeader.btnbackclick();"></div>
+		<div id="info">
+			<div class="info_wrapper">
+				<div id="region_name" onclick="reloadApp();"></div>
+				<div id="filter_breadcrumb_wrapper">
+					<div id="">
+						<span id="filter_breadcrumb"></span>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="toggle_favourite" onclick="objHeader.togglefavourite(this);"></div>
+	</div>
+	<div id="app_wrapper">
+		<div class="map-tab_panels">
+			<div class="container">
+				<ul>
+					<li data-panel="lives_improved" class="datafilter active-tab">
+						Lives improved
+					</li>
+					<li data-panel="global_presence" class="datafilter">
+						Global presence
+						<div class="datatype-filter"></div>
+					</li>
+					<li data-panel="sustainability" class="datafilter">
+						Sustainability
+						<div class="datatype-filter"></div>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div id="oru_filter_container">
 
-    <div id="top_panel">
-      <div id="region_info" onclicks="objHeader.btnbackclick();">
-        <div id="region_info_wrapper">
+			<div class="container">
+				<select onchange="objOruFilter.selectoru(this, this.value);">
+					<option id="btn_world" value="1">World</option>
+					<option id="btn_region" value="2">Region</option>
+					<option id="btn_bmc" value="3">Market</option>
+					<!-- <option id="btn_country" value="4">Country</option> -->
+				</select>
+			</div>
+		</div>
+		<div id="map">
+			<div id="main_wrapper" style="opacity: 1; display: block">
+				<div id="holder_1000" style="opacity: 1">
+				</div>
+			</div>
+		</div>
+		<div id="regions">
 
-          <div class="svg_wrapper">
-            <div id="region_info_title_wrapper" class="hide">
-              <h2 id="region_info_title">.</h2>
-            </div>
-            <div id="holder">
-              <svg id="svg_circle" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100%" viewBox="0 0 640 300" preserveAspectRatio="xMidYMid meet">
-                <g id="g" fill="none" transform="translate(0,10)" style="text-anchor: middle;">
-                  <circle id="background" width="100" cx="150" cy="125" r="100" />
-                  <path id="arc_path" />
-                  <g id="arc_path_left_wrapper" transform="rotate(0,200,200)">
-                    <path id="arc_path_left" />
-                  </g>
-                  <g transform="translate(0,10)">
-                    <text id="lives_improved_percentage" x="150" y="125" fill="#000">100%</text>
-                    <text id="lives_improved_percentage_sub" x="150" y="140" fill="#000" width="200">
-                      <tspan dy="0.8em">of total population</tspan>
-                    </text>
-                  </g>
-                </g>
-                <g transform="translate(0, 10)" style="text-anchor: end;">
-                  <text id="nr_lives_improved" x="600" y="75" fill="#fff">70.3</text>
-                  <text id="nr_lives_improved_label" x="600" y="100">million lives improved</text>
+		</div>
 
-                  <text id="nr_gdp" x="600" y="160" fill="#fff">$305 billion</text>
-                  <text class="nr_label" x="600" y="180">[gdp]</text>
 
-                  <text id="nr_population" x="600" y="240" fill="#fff">70 million</text>
-                  <text class="nr_label" x="600" y="260">[population]</text>
-                </g>
+		<div id="bottom_panel">
+			<div class="region_info">
+				<div class="region_info_wrapper container lives_improved">
+					<div class="region_info_close" onclick="objHeader.btnbackclick();"></div>
+					<div class="region_info_left">
+						<h2 class="region_info_title">.</h2>
+						<div class="data-wrapper">
+							<div class="nr_label">[gdp]<span class="nr_gdp"></span></div>
+							<div class="nr_label">[population]<span class="nr_population"></span></div>
+						</div>
+					</div>
+					<div class="region_info_right">
+						<div class="region_info_right_header">
+							<span class="nr_lives_improved_label">Lives improved</span><span class="nr_lives_improved">70.3</span>
+						</div>
+						<div class="lives_improved_wrapper">
+							<div class="lives_improved_numbers">
+								<div class="lives_improved_percentage">100%</div>
+			                    <div class="lives_improved_percentage_sub">
+								  	<span>of total population</span>
+								</div>
+							</div>
+							<div class="lives_improved_icons">
 
-              </svg>
-            </div>
-          </div>
-        </div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="region_info_wrapper container global_presence">
+					<div class="region_info_close" onclick="objHeader.btnbackclick();"></div>
+					<div class="region_info_left">
+						<h2 class="region_info_title">.</h2>
+					</div>
+					<div class="region_info_right">
+						<div class="data-wrapper">
+							<div class="nr_label">Assets<span class="nr_assets"></span></div>
+							<div class="nr_label">Number of employees<span class="nr_employees"></span></div>
+							<div class="nr_label">Male<span class="nr_male"></span></div>
+							<div class="nr_label">Female<span class="nr_female"></span></div>
+							<div class="nr_label">Manufacturing sites<span class="nr_plants"></span></div>
+							<div class="nr_label">R &amp; D centers<span class="nr_research"></span></div>
+							<div class="nr_label">Sales (EUR million)<span class="nr_sales"></span></div>
+						</div>
+					</div>
+				</div>
+				<div class="region_info_wrapper container sustainability">
+					<div class="region_info_close" onclick="objHeader.btnbackclick();"></div>
+					<div class="region_info_left">
+						<h2 class="region_info_title">.</h2>
+					</div>
+					<div class="region_info_right">
+						<div class="data-wrapper">
+							<div class="nr_label">CO<sub>2</sub> emitted (tonnes)<span class="nr_co2"></span></div>
+							<div class="nr_label">Emissions of restricted substances (kg)<span class="nr_emission"></span></div>
+							<div class="nr_label">Emissions of hazardous substances (kg)<span class="nr_emissionhaz"></span></div>
+							<div class="nr_label">FTE<span class="nr_fte"></span></div>
+							<div class="nr_label">Lost Workday Injury rate<span class="nr_lwc"></span></div>
+							<div class="nr_label">Waste (tonnes)<span class="nr_waste"></span></div>
+							<div class="nr_label">Recycled (%)<span class="nr_wasterecycled"></span></div>
+							<div class="nr_label">Water<span class="nr_water"></span></div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="map_tools">
+				<div class="container">
+					<div class="map_tools__legend">
+						<h4 class="map_tools__legend__title">Lives improved</h4>
+						<span class="map_tools__legend__subtitle">% of population</span>
+						<ul class="map_tools__legend--values">
+							<li class="map_tools__legend__top_value"></li>
+							<li class="map_tools__legend__low_value"></li>
+						</ul>
+					</div>
+					<div class="map_tools__zoom">
+						<div class="map_tools__zoom--in" onclick="objMap.zoomIn();"></div>
+						<div class="map_tools__zoom--out" onclick="objMap.zoomOut();"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="top_panel"></div>
+		<div id="slider_indicator"></div>
 
-      </div>
-      <div id="region_history">
-        <!-- base svg construction for the line graph -->
-        <svg class="graph" id="graph" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewbox="0 0 640 300" preserveAspectRatio="xMidYMid meet">
-          <g id="wrapper" transform="translate(0, 0)">
-            <text id="graph_title" y="40" x="0" xml:space="preserve">Trend</text>
-
-            <g id="grid_wrapper"> </g>
-
-            <!-- axis lines -->
-            <g class="axis_line">
-              <line id="x_axisline" x1="20" y1="10" x2="20" y2="280" />
-            </g>
-            <g class="axis_line">
-              <line id="y_axisline" x1="20" y1="280" x2="370" y2="280" />
-            </g>
-
-            <!-- axis labels -->
-            <g id="x_axislabel_wrapper" class="labels x-labels"> </g>
-            <g id="y_axislabel_wrapper" class="labels y-labels"> </g>
-
-            <!-- wrapper for the graph line -->
-            <g id="line_wrapper"> </g>
-
-            <!-- wrapper for the data points -->
-            <g id="data_point_wrapper" class="first_set points" data-setname="Our first data set"> </g>
-
-            <g id="popup_trend" transform="">
-              <path d="m 107,7.5187448 h -6.979 L 92.5,-0.00225557 84.979,7.5187448 H 3 c -1.6570001,0 -3,1.343 -3,3.0000002 v 31 c 0,1.657 1.3429999,3 3,3 h 104 c 1.657,0 3,-1.343 3,-3 v -31 c 0,-1.6570002 -1.343,-3.0000002 -3,-3.0000002 z" id="popup_trend_base" />
-              <g id="popup_trend_text_wrapper">
-                <text id="popup_trend_number" y="26" x="60" xml:space="preserve">2,23</text>
-                <text id="popup_trend_text" y="40" x="103" xml:space="preserve">million Lives Improved</text>
-              </g>
-            </g>
-
-            <g id="popup_value" onclick="objTrendGraph.showvaluepopup({show: false});" visibility="hidden">
-              <path d="M 50,25.279 C 50,11.470998 38.808,0.2789983 25,0.2789983 11.193,0.2789983 0,11.470998 0,25.279 c 0,9.007 4.7660001,16.899 11.911,21.3 L 25.332,60 40.246,45.086 C 46.176,40.514 50,33.344 50,25.279 z" id="popup_value_base" transform="scale(1.2)" />
-              <text id="popup_value_number" y="30" x="29" xml:space="preserve">2,233</text>
-              <text id="popup_value_text" y="47" x="29" xml:space="preserve">Million</text>
-            </g>
-          </g>
-        </svg>
-      </div>
-    </div>
-    <div id="bottom_panel">
-      <div id="simulation">
-
-        <div id="simulation_wrapper">
-          <h1 id="simulation_header">.</h1>
-          <div id="section1">
-            <h4>Sales</h4>
-            <input id="slidersales" type="range" min="-20" max="30" value="0" step="0.1" class="philips">
-            <div class="slider_value" id="value_sales">0%</div>
-            <div class="range_indicator">
-              <div class="min" id="salesmin">-20</div>
-              <div class="zero" id="saleszero">0</div>
-              <div class="max" id="salesmax">30</div>
-            </div>
-          </div>
-          <div id="section2">
-            <h4>Green sales percentage</h4>
-            <input id="slidergreensales" type="range" min="-20" max="30" value="0" step="0.1" class="philips">
-            <div class="slider_value" id="value_green_sales">0%</div>
-            <div class="range_indicator">
-              <div class="min" id="greensalesmin">-20</div>
-              <div class="zero" id="greensaleszero">0</div>
-              <div class="max" id="greensalesmax">30</div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div id="simulation_error_wrapper">
-
-      </div>
-
-    </div>
-    <div id="slider_indicator"></div>
-    <div id="show_simulation" onclick="objRegionInfo.showsimulation();">
-      <svg id="svg_show_simulation" style="text-anchor: middle;" width="100%" height="100%" viewBox="0 0 640 120">
-        <text id="show_simulation_text" x="320" y="50">Simulation</text>
-        <g transform="translate(0, -750)">
-          <polygon id="arrow_down" fill="#00454A" points="320.5,837.935 303.529,820.965 299.994,824.5 316.964,841.471 320.5,845.006 324.035,841.471
-							341.006,824.5 337.471,820.965 		" />
-        </g>
-      </svg>
-    </div>
-    <div id="show_current" onclick="objRegionInfo.showcurrent();">
-      <svg id="svg_show_current" style="text-anchor: middle;" width="100%" height="100%" viewBox="0 0 640 90">
-        <text id="show_current_text" x="320" y="85">Current</text>
-        <g transform="translate(0, -135)">
-          <polygon points="337.471,180.036 341.006,176.5 324.035,159.53 320.5,155.995 316.964,159.53 299.994,176.5 303.529,180.036 320.5,163.066 " id="arrow_up" />
-        </g>
-      </svg>
-    </div>
-  </div>
-  <div id="menu_bar">
-    <div id="btn_wrapper">
-      <div id="btn_bookmarks" class="btn" onclick="app.btnbookmarksclick(this);">Bookmarks</div>
-      <div id="btn_filter" class="btn" onclick="app.btnfilterclick(this);">Filters</div>
-      <div id="btn_explain" class="btn" onclick="app.btnexplainclick(this);">Help</div>
-      <div id="btn_logout" class="btn" onclick="app.btnlogoutclick(this);">Log out</div>
-    </div>
-  </div>
+	</div>
+	<div id="menu_bar">
+		<div id="btn_wrapper">
+			<div id="btn_bookmarks" class="btn" onclick="app.btnbookmarksclick(this);">Bookmarks</div>
+			<div id="btn_filter" class="btn" onclick="app.btnfilterclick(this);">Filters</div>
+			<div id="btn_explain" class="btn" onclick="app.btnexplainclick(this);">Help</div>
+			<div id="btn_logout" class="btn" onclick="app.btnlogoutclick(this);">Log out</div>
+		</div>
+	</div>
 </div>
 <div id="login_panel" class="panel full">
-  <div class="form_outer_wrapper">
-    <form id="login">
-      <div id="form_wrapper">
-        <div class="text emphasis">You are not logged in at the Philips domain.</div>
-        <div class="text">Please use the button below to access this application.</div>
-        <input type="button" id="btn_submit" class="btn btn_login" onclick="objLogin.btnsubmitclick();" value="Log in" />
-      </div>
-    </form>
-  </div>
+	<div class="form_outer_wrapper">
+		<form id="login">
+			<div id="form_wrapper">
+				<div class="text emphasis">You are not logged in at the Philips domain.</div>
+				<div class="text">Please use the button below to access this application.</div>
+				<input type="button" id="btn_submit" class="btn btn_login" onclick="objLogin.btnsubmitclick();" value="Log in" />
+			</div>
+		</form>
+	</div>
 </div>
 <div id="filter_panel" class="panel modal">
-  <div id="filter_loader"></div>
-  <div class="panel_header">
-    <h2>Filters</h2>
-    <div id="btn_close_filter" class="btn btn_close" onclick="objFilter.hide();">.</div>
-    <div id="btn_apply_filter" class="btn btn_apply" onclick="objFilter.applyfilter();">Apply</div>
-  </div>
-  <div class="modal_content">
-    <h4>Select geography filter:</h4>
-    <div id="oru_filter_container">
-      <div id="btn_world" onclick="objOruFilter.selectoru(this, 1);">World</div>
-      <div id="btn_region" onclick="objOruFilter.selectoru(this, 2);">Region</div>
-      <div id="btn_bmc" onclick="objOruFilter.selectoru(this, 3);" class="selected">Market</div>
-      <div id="btn_country" onclick="objOruFilter.selectoru(this, 4);">Country</div>
-    </div>
-    <h4>Select business filter:</h4>
-    <div id="filter_container"></div>
-  </div>
+	<div id="filter_loader"></div>
+	<div class="panel_header">
+		<h2>Filters</h2>
+		<div id="btn_close_filter" class="btn btn_close" onclick="objFilter.hide();">.</div>
+		<div id="btn_apply_filter" class="btn btn_apply" onclick="objFilter.applyfilter();">Apply</div>
+	</div>
+	<div class="modal_content">
+		<h4>Select geography filter:</h4>
+
+		<h4>Select business filter:</h4>
+		<div id="filter_container"></div>
+	</div>
 </div>
 <div id="explain_panel" class="panel modal">
-  <div class="panel_header">
-    <h2>Help</h2>
-    <div id="btn_close_explain" class="btn btn_close" onclick="objExplain.hide();">.</div>
-  </div>
-  <div class="modal_content">
-    <div id="explain_content">
+	<div class="panel_header">
+		<h2>Help</h2>
+		<div id="btn_close_explain" class="btn btn_close" onclick="objExplain.hide();">.</div>
+	</div>
+	<div class="modal_content">
+		<div id="explain_content">
 
-    </div>
-  </div>
-</div>
-<div id="panel_info_panel" class="panel modal fullscreen" onclick="objPanelInfo.hide();">
-  <div id="content_wrapper">
-    <div class="modal_content">
-      <div id="panel_info_content">
-
-      </div>
-    </div>
-  </div>
+		</div>
+	</div>
 </div>
 <div id="bookmarks_panel" class="panel modal">
-  <div class="panel_header">
-    <h2>Bookmarks</h2>
-    <div id="btn_close_bookmarks" class="btn btn_close" onclick="objBookmarks.hide(true);">.</div>
-  </div>
-  <div class="modal_content" id="bookmarkslist">
+	<div class="panel_header">
+		<h2>Bookmarks</h2>
+		<div id="btn_close_bookmarks" class="btn btn_close" onclick="objBookmarks.hide(true);">.</div>
+	</div>
+	<div class="modal_content" id="bookmarkslist">
 
-  </div>
+	</div>
 </div>
 <div id="messages_panel" class="panel modal">
-  <div class="panel_header">
-    <h2>Messages</h2>
-    <div id="btn_close_messages" class="btn btn_close" onclick="objLogin.hidemessages(true);">.</div>
-  </div>
-  <div class="modal_content">
-    <ul id="messagelist">
-    </ul>
-  </div>
+	<div class="panel_header">
+		<h2>Messages</h2>
+		<div id="btn_close_messages" class="btn btn_close" onclick="objLogin.hidemessages(true);">.</div>
+	</div>
+	<div class="modal_content">
+		<ul id="messagelist">
+		</ul>
+	</div>
 </div>
 <div id="overlay">
-  <div id="loader"></div>
+	<div id="loader"></div>
 </div>
 <div id="loading"></div>
 <div id="producttree_temp"></div>
