--- a/html/index.html
+++ b/html/index.html
@@ -34,6 +34,7 @@
 		<script type="text/javascript" src="js/lib/hammer.min.js">//</script>
 		<script type="text/javascript" src="js/lib/sizzle.min.js">//</script>
 		<script type="text/javascript" src="js/lib/marquee.js">//</script>
+		<script type="text/javascript" src="js/lib/iframeResizer.contentWindow.min.js">//</script>
 
 
 
@@ -71,10 +72,11 @@
 			}
 			loadExternalResources();
 		</script>
-		
+
 		<script type="text/javascript">
 			// Livereload
 			document.write('<script src="http://' + (location.host || 'localhost').split(':')[0]+ ':' + ((location.host.split(':')[1]*1) +1000) + '/livereload.js"></'+ 'script>');
 		</script>
+		<div data-iframe-height=""></div>
 	</body>
 </html>
