--- a/html/data/body_content.html
+++ b/html/data/body_content.html
@@ -22,10 +22,12 @@
 					</li>
 					<li data-panel="global_presence" class="datafilter">
 						Global presence
+						<div class="subtypeindicator">All data</div>
 						<div class="datatype-filter"></div>
 					</li>
 					<li data-panel="sustainability" class="datafilter">
 						Sustainability
+						<div class="subtypeindicator">All data</div>
 						<div class="datatype-filter"></div>
 					</li>
 				</ul>
@@ -103,6 +105,68 @@
 						<h2 class="region_info_title">.</h2>
 					</div>
 					<div class="region_info_right">
+						<div class="image">
+							<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+								 viewBox="0 0 303.2 375.4" style="enable-background:new 0 0 303.2 375.4;" xml:space="preserve">
+							<style type="text/css">
+								.st0{fill:#5BBBB7;}
+								.st1{fill:#CAE3E9;}
+								.st2{fill:#1E9D8B;}
+							</style>
+							<g>
+								<g>
+									<g>
+										<g>
+											<g>
+												<path class="st0" d="M24.7,22.6c0,12.3,10,22.2,22.3,22.2c12.3,0,22.3-10,22.3-22.2c0-12.3-10-22.2-22.3-22.2h0
+													C34.6,0.4,24.7,10.3,24.7,22.6z"/>
+											</g>
+										</g>
+										<g>
+											<path class="st0" d="M85.3,57.9l-0.4-1c-3.5-7.3-11.6-12.3-20.6-12.3C60.2,49.4,54,52.4,47,52.4h-0.1c-7,0-13.2-3-17.3-7.7
+												c-9,0-17.1,5-20.6,12.3l-0.4,1C3.1,69.2,0,81.7,0,94.9c0,7.9,1.1,15.7,3.2,23.1H22V96.2h49.9V118h18.8
+												c2.1-7.4,3.2-15.2,3.2-23.1C93.9,81.7,90.9,69.2,85.3,57.9z"/>
+										</g>
+									</g>
+									<g>
+										<g>
+											<g>
+												<path class="st0" d="M132,22.6c0,12.3,10,22.2,22.3,22.2c12.3,0,22.3-10,22.3-22.2c0-12.3-10-22.2-22.3-22.2h0
+													C142,0.4,132,10.3,132,22.6z"/>
+											</g>
+										</g>
+										<g>
+											<path class="st0" d="M192.7,57.9l-0.4-1c-3.5-7.3-11.6-12.3-20.6-12.3c-4.1,4.7-10.3,7.7-17.3,7.7h-0.1c-7,0-13.2-3-17.3-7.7
+												c-9,0-17.1,5-20.6,12.3l-0.5,1c-5.5,11.2-8.6,23.8-8.6,37c0,7.9,1.1,15.7,3.2,23.1h18.8V96.2h49.9V118h18.8
+												c2.1-7.4,3.2-15.2,3.2-23.1C201.3,81.7,198.2,69.2,192.7,57.9z"/>
+										</g>
+									</g>
+									<path class="st0" d="M246.1,177.9v0.9c0,25.8-20.6,46.7-46.1,46.7H0.1v-21.7c0.1,0,0.3,0,0.4,0c14.3,0,25.9-11.7,25.9-26.2
+										c0-14.5-11.6-26.2-25.9-26.2c-0.1,0-0.3,0-0.4,0v-20.2H200C225.4,131.3,246.1,152.2,246.1,177.9z M221.9,177.6
+										c0-14.5-11.6-26.2-25.9-26.2s-25.9,11.7-25.9,26.2c0,14.5,11.6,26.2,25.9,26.2S221.9,192.1,221.9,177.6z M124.2,177.6
+										c0-14.5-11.6-26.2-25.9-26.2c-14.3,0-25.9,11.7-25.9,26.2c0,14.5,11.6,26.2,25.9,26.2C112.6,203.9,124.2,192.1,124.2,177.6z"/>
+								</g>
+								<g>
+									<path class="st2" d="M303.2,35.5L296.6,53c-9.4-4.6-23-7.9-35.5-7.9c-30.5,0-48.4,16-54.6,40.3h70.6l-4.2,10.7h-68.2
+										c-0.4,3.1-0.4,5.9-0.4,9c0,3.1,0,5.9,0.4,8.8h61.6l-3.7,10.7h-56.1c6.1,24.3,24.6,39.2,54.4,39.2c13.8,0,25.6-3.7,35.7-7.5
+										l0.2,18.9c-11,5-23.5,8.1-40.3,8.1c-39.5,0-68.6-21.3-76.1-58.7h-19.3l3.9-10.7h14c-0.2-2.8-0.4-5.9-0.4-9.2c0-2.8,0-5.7,0.2-8.5
+										h-18.6l3.9-10.7h16.2c7.5-38.4,37.5-59.8,76.9-59.8C273.6,25.6,291.1,29.6,303.2,35.5z"/>
+								</g>
+								<g>
+									<path class="st1" d="M81.3,222.8c-0.6,0.2-1.1,0.7-1.3,1.3c-0.2,0.6,0,1.3,0.5,1.8l5.8,5.8L68.9,249c0,0,0,0,0,0l-2.1,2.1
+										c-7.1-6.1-16.3-9.8-26.4-9.8C18.1,241.2,0,259.3,0,281.6C0,303.9,18.1,322,40.4,322c22.3,0,40.4-18.1,40.4-40.4
+										c0-10.1-3.7-19.3-9.8-26.4l19.4-19.4l5.8,5.8c0.5,0.5,1.1,0.6,1.8,0.5c0.6-0.2,1.1-0.7,1.3-1.3l6.5-24.4L81.3,222.8z M64.8,306
+										c-6.5,6.5-15.2,10.1-24.4,10.1c-9.2,0-17.9-3.6-24.4-10.1c-6.5-6.5-10.1-15.2-10.1-24.4c0-9.2,3.6-17.9,10.1-24.4
+										c6.5-6.5,15.2-10.1,24.4-10.1c9.2,0,17.9,3.6,24.4,10.1c6.5,6.5,10.1,15.2,10.1,24.4C74.9,290.8,71.3,299.5,64.8,306z"/>
+									<path class="st1" d="M165.8,310.5c15.8-15.8,15.8-41.3,0-57.1c-15.8-15.8-41.3-15.8-57.1,0c-15.8,15.8-15.8,41.3,0,57.1
+										c7.1,7.1,16.3,11,25.6,11.7v0.7h0v23.3h-23.3v5.8h23.3v23.3h5.8V352h23.3v-5.8h-23.3v-23.3h0v-0.7
+										C149.6,321.5,158.7,317.6,165.8,310.5z M112.9,306.4c-6.5-6.5-10.1-15.2-10.1-24.4c0-9.2,3.6-17.9,10.1-24.4
+										c6.5-6.5,15.2-10.1,24.4-10.1c9.2,0,17.9,3.6,24.4,10.1c6.5,6.5,10.1,15.2,10.1,24.4c0,9.2-3.6,17.9-10.1,24.4
+										c-6.5,6.5-15.2,10.1-24.4,10.1S119.4,312.9,112.9,306.4z"/>
+								</g>
+							</g>
+							</svg>
+						</div>
 						<div class="data-wrapper">
 							<div class="nr_label">Assets<span class="nr_assets"></span></div>
 							<div class="nr_label">Number of employees<span class="nr_employees"></span></div>
@@ -120,6 +184,49 @@
 						<h2 class="region_info_title">.</h2>
 					</div>
 					<div class="region_info_right">
+						<div class="image">
+							<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+								 viewBox="0 0 303.2 375.4" style="enable-background:new 0 0 303.2 375.4;" xml:space="preserve">
+							<style type="text/css">
+								.st0{fill:#5BBBB7;}
+								.st1{fill:#CAE3E9;}
+								.st2{fill:#1E9D8B;}
+							</style>
+							<g>
+								<path class="st0" d="M228.5,280.9v-58.4c-36,0-66.2,24.9-74.3,58.4h-20.7v-58.4c-36,0-66.2,24.9-74.3,58.4H37.4L32.2,128h-26
+									L1.1,280.9v94.5h247.4v-94.5H228.5z"/>
+								<g>
+									<path class="st1" d="M113.8,10.7c9.4,0,18.2,3.5,24.6,9.9c5.8,5.7,9.2,13,9.8,21l0.7,7.9l7.8,1.6c12.4,2.6,21.3,13.4,21.3,25.7
+										c0,6.9-2.8,13.4-7.9,18.4c-5.2,5.1-12,7.9-19.3,7.9H31.6c-5.6,0-10.1-2.4-12.8-4.4c-5.1-3.8-8.2-9.7-8.2-15.9
+										c0-4.6,1.7-9.1,4.8-12.7c3.1-3.6,7.4-6.1,12.1-7l6.8-1.3l1.6-6.8c1.3-5.5,4.2-10.6,8.5-14.6c5.8-5.4,13.4-8.4,21.5-8.4
+										c2.1,0,4.1,0.2,6.1,0.6l7.3,1.4l3.8-6.3C89.5,17.1,101.2,10.7,113.8,10.7 M113.8,0C97.3,0,82.2,8.6,74,22.1
+										c-2.7-0.5-5.4-0.8-8.1-0.8c-10.8,0-21,4-28.8,11.3c-5.9,5.5-9.8,12.4-11.6,19.9C11,55.2,0,67.8,0,82.7c0,9.9,4.9,18.9,12.5,24.5
+										c5.3,3.9,11.9,6.5,19.1,6.5h119.3c20.9,0,37.9-16.7,37.9-36.9c0-17.5-12.8-32.5-29.8-36.1c-0.9-10.5-5.4-20.2-13-27.7
+										C137.5,4.6,126.1,0,113.8,0L113.8,0z"/>
+									<g>
+										<path class="st1" d="M83.6,50.9l-1.8,5.3c-2.2-1-4.3-1.3-5.7-1.3c-6.7,0-9.2,3.8-9.2,8.8c0,5.1,2.6,8.7,9,8.7
+											c2.4,0,4.6-0.6,6.6-1.4l1.5,5.4c-1.9,0.8-5.2,1.8-9.5,1.8c-8.7,0-15.2-5-15.2-14.5c0-9.7,6.8-14.6,15.6-14.6
+											C78.4,49.1,81.6,49.9,83.6,50.9z"/>
+										<path class="st1" d="M117.7,63.7c0,8.5-5.4,14.5-14.7,14.5c-9.4,0-14.8-6.1-14.8-14.5c0-8.4,5.4-14.5,14.8-14.5
+											C112.4,49.1,117.7,55.2,117.7,63.7z M95.9,63.7c0,5.7,2.6,8.7,7.1,8.7c4.4,0,7-3,7-8.7c0-5.6-2.6-8.8-7-8.8
+											C98.6,54.9,95.9,58.1,95.9,63.7z"/>
+										<path class="st1" d="M135.3,79.9c0,3-1.8,4.4-3.9,6.3l-2.8,2.4h6.8v3.8h-12.9v-3.5l6.3-5.5c1.3-1.2,1.9-2,1.9-3.2
+											c0-1.2-0.6-2.5-2.7-2.5c-1.7,0-3.7,0.9-4.8,1.4l-1.4-3.4c2.1-1.2,4.6-1.8,6.9-1.8C132.5,74,135.3,76.3,135.3,79.9z"/>
+									</g>
+								</g>
+								<path class="st2" d="M227.4,139.3c3.5,0,8,2.7,9.7,5.8l16.8,29.9c0.5,0.9,1.6,1.2,2.5,0.7l12.6-7.3l-12.3,46.3l-45.5-12.6l12.5-7.3
+									c0.9-0.5,1.2-1.6,0.7-2.5l-27.3-48.7c-1-1.8-2.2-3.2-3.5-4.3H227.4z M128.5,305.7l-16.9-29.8c-1.8-3.1-1.8-8.3,0-11.5l16.9-29.8
+									c0.5-0.9,0.2-2-0.7-2.5l-12.6-7.4l45.5-12.4l12.2,46.4l-12.5-7.4c-0.9-0.5-2-0.2-2.5,0.7l-27.6,48.5
+									C129.4,302.3,128.7,304,128.5,305.7 M194.9,315.6h-47.1l-2.6-0.1c-0.2,0-0.4,0-0.6-0.1c-1-0.2-2.2-0.6-3.2-1.1
+									c-1.6-1-2.5-2.5-2.4-4.5c0-1.5,0.5-3.1,1.5-4.8l13.8-24.2l40.7,0L194.9,315.6z M181.4,210.2l-29.4-17.4l23.7-41.5l1.4-2.3
+									c0.1-0.2,0.2-0.3,0.3-0.5c0.7-0.8,1.6-1.7,2.5-2.3c1.7-0.9,3.4-0.9,5,0.1c1.2,0.8,2.4,2,3.4,3.8l13.6,24.3L181.4,210.2z
+									 M285.4,309.7c-1.8,3.1-6.2,5.8-9.7,5.8h-33.8c-1,0-1.8,0.9-1.8,1.9l0,14.8l-33.4-33.9l33.3-34l0,14.7c0,1,0.8,1.8,1.8,1.8l55.1,0
+									c2,0,3.9-0.3,5.4-1L285.4,309.7z M300.6,268.6c-1.3,0.7-2.9,1.1-4.9,1.1l-27.5,0l-20.4-35.9l29.5-17.4l23.6,41.6l1.3,2.3
+									c0.1,0.2,0.2,0.4,0.2,0.6c0.4,1,0.6,2.2,0.7,3.4C303.1,266.2,302.3,267.7,300.6,268.6"/>
+							</g>
+							</svg>
+
+						</div>
 						<div class="data-wrapper">
 							<div class="nr_label">CO<sub>2</sub> emitted (tonnes)<span class="nr_co2"></span></div>
 							<div class="nr_label">Emissions of restricted substances (kg)<span class="nr_emission"></span></div>
