--- a/html/data/body_content.html
+++ b/html/data/body_content.html
@@ -37,7 +37,7 @@
 
 			<div class="container">
 				<select onchange="objOruFilter.selectoru(this, this.value);">
-					<option id="btn_world" value="1">World</option>
+					<option id="btn_world" value="1">Global</option>
 					<option id="btn_region" value="2">Region</option>
 					<option id="btn_bmc" value="3">Market</option>
 					<!-- <option id="btn_country" value="4">Country</option> -->
