Fixed issues still present in the map

--- a/html/data/body_content.html
+++ b/html/data/body_content.html
@@ -62,8 +62,8 @@
 						<h4 class="map_tools__legend__title">[lives_improved]</h4>
 						<span class="map_tools__legend__subtitle">% [of_total_population]</span>
 						<ul class="map_tools__legend--values">
-							<li class="map_tools__legend__top_value"></li>
-							<li class="map_tools__legend__low_value"></li>
+							<li class="map_tools__legend__top_value">[high]</li>
+							<li class="map_tools__legend__low_value">[low]</li>
 						</ul>
 					</div>
 					<div class="map_tools__zoom">
@@ -168,13 +168,13 @@
 							</svg>
 						</div>
 						<div class="data-wrapper">
+							<div class="nr_label">[number_sales]<span class="nr_sales"></span></div>
 							<div class="nr_label">[number_assets]<span class="nr_assets"></span></div>
 							<div class="nr_label">[number_of_employees]<span class="nr_employees"></span></div>
 							<div class="nr_label">[percentage_male]<span class="nr_male"></span></div>
 							<div class="nr_label">[percentage_female]<span class="nr_female"></span></div>
 							<div class="nr_label">[manifacturing_sites]<span class="nr_plants"></span></div>
 							<div class="nr_label">[r_and_d_centers]<span class="nr_research"></span></div>
-							<div class="nr_label">[number_sales]<span class="nr_sales"></span></div>
 						</div>
 					</div>
 				</div>
@@ -228,13 +228,13 @@
 
 						</div>
 						<div class="data-wrapper">
-							<div class="nr_label">[c_o_2]<span class="nr_co2"></span></div>
-							<div class="nr_label">[emissions]<span class="nr_emission"></span></div>
-							<div class="nr_label">[emissionshaz]<span class="nr_emissionhaz"></span></div>
 							<div class="nr_label">[lwc_rate]<span class="nr_trc"></span></div>
+							<div class="nr_label">[c_o_2]<span class="nr_co2"></span></div>
 							<div class="nr_label">[waste]<span class="nr_waste"></span></div>
 							<div class="nr_label">[recycled]<span class="nr_wasterecycled"></span></div>
 							<div class="nr_label">[water]<span class="nr_water"></span></div>
+							<div class="nr_label">[emissionshaz]<span class="nr_emissionhaz"></span></div>
+							<div class="nr_label">[emissions]<span class="nr_emission"></span></div>
 						</div>
 					</div>
 				</div>
