--- a/html/dev.html
+++ b/html/dev.html
@@ -1,72 +1,65 @@
 <!DOCTYPE html>
 <!--[if IEMobile 7 ]>    <html class="no-js iem7"> <![endif]-->
-<!--[if (gt IEMobile 7)|!(IEMobile)]><!--> <html class="no-js"> <!--<![endif]-->
-	<head>
-		<meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-		<meta charset="utf-8">
-		<title>Philips Sustainability - LivesImproved</title>
-		<meta name="description" content="">
-		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
+<!--[if (gt IEMobile 7)|!(IEMobile)]><!-->
+<html class="no-js">
+<!--<![endif]-->
 
-		<!--[if lt IE 10]>
-		<meta http-equiv="refresh" content="0;URL=https://www.livesimproved.philips.com/pages/info/browser_not_supported.aspx">
-		<![endif]-->
+<head>
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+    <meta charset="utf-8">
+    <title>Philips Sustainability - LivesImproved</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
 
-		<!-- the fixed resources -->
-		<script type="text/javascript">
-			if(location.href.indexOf('http') > -1){
-				//assume that we are running in a web browser
-				document.write('\x3Cscript type="text/javascript" src="js/config.js?rnd=' + Math.random() + '">\x3C/script>');
-			}else{
-				//assume we are running in the app (cordova)
-				document.write('\x3Cscript type="text/javascript" charset="utf-8" src="../cordova.js">\x3C/script>');
-				document.write('\x3Cscript type="text/javascript" src="js/config.js">\x3C/script>');			
-			}
-		</script>
+    <!--[if lt IE 10]>
+    <meta http-equiv="refresh" content="0;URL=https://www.livesimproved.philips.com/pages/info/browser_not_supported.aspx">
+    <![endif]-->
 
+    <!-- Load the CSS and JS Resources -->
+    <script type="text/javascript" src="dist/js/load.js">//</script>
+    <script type="text/javascript">
+        loadJavaScriptResources([
+            '/dist/js/lib.js', 
+            '/js/config.js',
+            '/js/helpers/utils.js',
+            '/js/helpers/store.js',
+            '/js/helpers/infographic.js',
+            '/js/panels/footer.js',
+            '/js/panels/header.js',
+            '/js/panels/map.js',
+            '/js/panels/overlay.js',
+            '/js/panels/region_info.js',
+            '/js/panels/sliders.js',
+            '/js/panels/login.js',
+            '/js/panels/error.js',
+            '/js/panels/filter.js',
+            '/js/panels/bookmarks.js',
+            '/js/panels/explain.js',
+            '/js/panels/graph.js',
+            '/js/panels/loading.js',
+            '/js/panels/panel_info.js',
+            '/js/elements/mru_filter.js',
+            '/js/elements/oru_filter.js',
+            '/js/elements/data_filter.js',
+            '/js/app.js'
+        ]);      
+    </script>
 
-		<!-- Libs -->
-		<script type="text/javascript" src="js/lib/svg_zoom_homegrown_v2.js">//</script>
-		<script type="text/javascript" src="js/lib/CSSPlugin.min.js">//</script>
-		<script type="text/javascript" src="js/lib/EasePack.min.js">//</script>
-		<script type="text/javascript" src="js/lib/TweenLite.min.js">//</script>
-		<script type="text/javascript" src="js/lib/hammer.min.js">//</script>
-		<script type="text/javascript" src="js/lib/sizzle.min.js">//</script>
-		<script type="text/javascript" src="js/lib/marquee.js">//</script>
+</head>
 
-	</head>
-	<body>
-		<div id="content_outer_wrapper">.</div>
+<body>
+    <div id="content_outer_wrapper">.</div>
 
-		<script type="text/javascript">
-			/*
-			Load external resources and start the application logic
-			*/
-			var intTimerId=0;
-			function loadExternalResources() {
-				if (typeof objConfig != 'undefined') {
-					//ie only stylesheet...
-					if (!!window.MSStream) objConfig.resources.css.push('/css/ie-all-versions.css')
-					
-					//load the css files
-					for(var i=0; i<objConfig.resources.css.length; i++){
-						objConfig.loadremotefile(objConfig.resources.css[i])
-					}
+    <script type="text/javascript">
+        // Start the application logic
+        window.app.init();
 
-					//load the js files
-					for(var i=0; i<objConfig.resources.js.length; i++){
-						objConfig.loadremotefile(objConfig.resources.js[i])
-					}
+        // Add conditional assets
+        addAdditionalAssets();
+    </script>
 
-					//start the application logic
-					objConfig.startapplication();
-				} else {
-					intTimerId=window.setTimeout(function () {
-						loadExternalResources();
-					}, 50);
-				}
-			}
-			loadExternalResources();
-		</script>
-	</body>
+    <div data-iframe-height=""></div>
+</body>
+
 </html>
