--- a/html/dev.html
+++ b/html/dev.html
@@ -20,7 +20,13 @@
     <script type="text/javascript" src="dist/js/load.js">//</script>
     <script type="text/javascript">
         loadJavaScriptResources([
-            '/dist/js/lib.js', 
+            '/js/lib/svg_zoom_homegrown_v2.js',
+            '/js/lib/CSSPlugin.min.js',
+            '/js/lib/EasePack.min.js',
+            '/js/lib/TweenLite.min.js',
+            '/js/lib/hammer.min.js',
+            '/js/lib/sizzle.min.js',
+            '/js/lib/marquee.js',
             '/js/config.js',
             '/js/helpers/utils.js',
             '/js/helpers/store.js',
