Fixed zooming and centering of map issues

--- a/html/data/body_content.html
+++ b/html/data/body_content.html
@@ -67,8 +67,8 @@
 						</ul>
 					</div>
 					<div class="map_tools__zoom">
-						<div class="map_tools__zoom--in" onclick="objMap.zoomIn();"></div>
-						<div class="map_tools__zoom--out" onclick="objMap.zoomOut();"></div>
+						<div class="map_tools__zoom--in" onclick="objMap.zoom('in');"></div>
+						<div class="map_tools__zoom--out" onclick="objMap.zoom('out');"></div>
 					</div>
 				</div>
 			</div>
