Improved responsive behavior of numbers and labels in the details panel, show/hide lines in the detail view is now triggered "onhashchange"

--- a/html/data/body_content.html
+++ b/html/data/body_content.html
@@ -78,8 +78,8 @@
 					<div class="region_info_left">
 						<h2 class="region_info_title">.</h2>
 						<div class="data-wrapper">
-							<div class="nr_label">[gdp]<span class="nr_gdp"></span></div>
-							<div class="nr_label">[population]<span class="nr_population"></span></div>
+							<div class="nr_label">[gdp]<span class="nr_gdp nr"></span></div>
+							<div class="nr_label">[population]<span class="nr_population nr"></span></div>
 						</div>
 					</div>
 					<div class="region_info_right">
@@ -167,14 +167,14 @@
 							</g>
 							</svg>
 						</div>
-						<div class="data-wrapper">
-							<div class="nr_label">[number_sales]<span class="nr_sales"></span></div>
-							<div class="nr_label">[number_assets]<span class="nr_assets"></span></div>
-							<div class="nr_label">[number_of_employees]<span class="nr_employees"></span></div>
-							<div class="nr_label">[percentage_male]<span class="nr_male"></span></div>
-							<div class="nr_label">[percentage_female]<span class="nr_female"></span></div>
-							<div class="nr_label">[manifacturing_sites]<span class="nr_plants"></span></div>
-							<div class="nr_label">[r_and_d_centers]<span class="nr_research"></span></div>
+						<div class="data-wrapper" id="global_presence_details">
+							<div id="value_sales" class="nr_label"><span class="label">[number_sales]</span><span class="nr_sales nr"></span></div>
+							<div id="value_assets" class="nr_label"><span class="label">[number_assets]</span><span class="nr_assets nr"></span></div>
+							<div id="value_employees" class="nr_label"><span class="label">[number_of_employees]</span><span class="nr_employees nr"></span></div>
+							<div id="value_male" class="nr_label"><span class="label">[percentage_male]</span><span class="nr_male nr"></span></div>
+							<div id="value_female" class="nr_label"><span class="label">[percentage_female]</span><span class="nr_female nr"></span></div>
+							<div id="value_plants" class="nr_label"><span class="label">[manifacturing_sites]</span><span class="nr_plants nr"></span></div>
+							<div id="value_research" class="nr_label"><span class="label">[r_and_d_centers]</span><span class="nr_research nr"></span></div>
 						</div>
 					</div>
 				</div>
@@ -227,14 +227,14 @@
 							</svg>
 
 						</div>
-						<div class="data-wrapper">
-							<div class="nr_label">[lwc_rate]<span class="nr_trc"></span></div>
-							<div class="nr_label">[c_o_2]<span class="nr_co2"></span></div>
-							<div class="nr_label">[waste]<span class="nr_waste"></span></div>
-							<div class="nr_label">[recycled]<span class="nr_wasterecycled"></span></div>
-							<div class="nr_label">[water]<span class="nr_water"></span></div>
-							<div class="nr_label">[emissionshaz]<span class="nr_emissionhaz"></span></div>
-							<div class="nr_label">[emissions]<span class="nr_emission"></span></div>
+						<div class="data-wrapper" id="sustainability_details">
+							<div id="value_trc" class="nr_label"><span class="label">[lwc_rate]</span><span class="nr_trc nr"></span></div>
+							<div id="value_co2" class="nr_label"><span class="label">[c_o_2]</span><span class="nr_co2 nr"></span></div>
+							<div id="value_waste" class="nr_label"><span class="label">[waste]</span><span class="nr_waste nr"></span></div>
+							<div id="value_wasterecycled" class="nr_label"><span class="label">[recycled]</span><span class="nr_wasterecycled nr"></span></div>
+							<div id="value_water" class="nr_label"><span class="label">[water]</span><span class="nr_water nr"></span></div>
+							<div id="value_emissionhaz" class="nr_label"><span class="label">[emissionshaz]</span><span class="nr_emissionhaz nr"></span></div>
+							<div id="value_emission" class="nr_label"><span class="label">[emissions]</span><span class="nr_emission nr"></span></div>
 						</div>
 					</div>
 				</div>
