--- a/html/data/body_content.html
+++ b/html/data/body_content.html
@@ -17,15 +17,15 @@
 		<div class="map-tab_panels">
 			<div class="container">
 				<ul>
-					<li data-panel="lives_improved" class="datafilter active-tab" onclick="objDataFilter.datasourcechanged(this, 'lives_improved', true)">
+					<li data-panel="lives_improved" class="datafilter active-tab" onclick="objDataFilter.changedatasource(this, 'lives_improved')">
 						[lives_improved]
 					</li>
-					<li data-panel="global_presence" class="datafilter" onclick="objDataFilter.datasourcechanged(this, 'global_presence', true)">
+					<li data-panel="global_presence" class="datafilter" onclick="objDataFilter.changedatasource(this, 'global_presence')">
 						[global_presence]
 						<div class="subtypeindicator">[all_data]</div>
 						<div class="datatype-filter"></div>
 					</li>
-					<li data-panel="sustainability" class="datafilter" onclick="objDataFilter.datasourcechanged(this, 'sustainability', true)">
+					<li data-panel="sustainability" class="datafilter" onclick="objDataFilter.changedatasource(this, 'sustainability')">
 						[sustainability]
 						<div class="subtypeindicator">[all_data]</div>
 						<div class="datatype-filter"></div>
@@ -233,8 +233,8 @@
 							<div id="value_waste" class="nr_label"><span class="label">[waste]</span><span class="nr_waste nr"></span></div>
 							<div id="value_wasterecycled" class="nr_label"><span class="label">[recycled]</span><span class="nr_wasterecycled nr"></span></div>
 							<div id="value_water" class="nr_label"><span class="label">[water]</span><span class="nr_water nr"></span></div>
-							<div id="value_emissionhaz" class="nr_label"><span class="label">[emissionshaz]</span><span class="nr_emissionhaz nr"></span></div>
-							<div id="value_emission" class="nr_label"><span class="label">[emissions]</span><span class="nr_emission nr"></span></div>
+							<div id="value_emissionshaz" class="nr_label"><span class="label">[emissionshaz]</span><span class="nr_emissionhaz nr"></span></div>
+							<div id="value_emissions" class="nr_label"><span class="label">[emissions]</span><span class="nr_emission nr"></span></div>
 						</div>
 					</div>
 				</div>
