Created unique function for closing the details panel

--- a/html/data/body_content.html
+++ b/html/data/body_content.html
@@ -74,7 +74,7 @@
 			</div>
 			<div class="region_info">
 				<div class="region_info_wrapper container lives_improved">
-					<div class="region_info_close" onclick="objHeader.btnbackclick();"></div>
+					<div class="region_info_close" onclick="objRegionInfo.hidedetailspanel();"></div>
 					<div class="region_info_left">
 						<h2 class="region_info_title">.</h2>
 						<div class="data-wrapper">
@@ -100,7 +100,7 @@
 					</div>
 				</div>
 				<div class="region_info_wrapper container global_presence">
-					<div class="region_info_close" onclick="objHeader.btnbackclick();"></div>
+					<div class="region_info_close" onclick="objRegionInfo.hidedetailspanel();"></div>
 					<div class="region_info_left">
 						<h2 class="region_info_title">.</h2>
 					</div>
@@ -179,7 +179,7 @@
 					</div>
 				</div>
 				<div class="region_info_wrapper container sustainability">
-					<div class="region_info_close" onclick="objHeader.btnbackclick();"></div>
+					<div class="region_info_close" onclick="objRegionInfo.hidedetailspanel();"></div>
 					<div class="region_info_left">
 						<h2 class="region_info_title">.</h2>
 					</div>
