Added "no data" legend

--- a/html/data/body_content.html
+++ b/html/data/body_content.html
@@ -65,6 +65,10 @@
 							<li class="map_tools__legend__top_value">[high]</li>
 							<li class="map_tools__legend__low_value">[low]</li>
 						</ul>
+                        <div class="map_tools__legend--nodata">
+                            <span class="map_tools__legend--nodata--color"></span>
+                            <span class="map_tools__legend--nodata--text">[no_data_available]</span>
+                        </div>
 					</div>
 					<div class="map_tools__zoom">
 						<div class="map_tools__zoom--in" onclick="objMap.zoom('in');"></div>
