Dynamically define the type of datasources to use in the worldmap by appending ?datasource= to the base HTML of the map. Omitting this parameter will show all datasources (lives_improved, sustainability and global_presence).

--- a/html/data/body_content.html
+++ b/html/data/body_content.html
@@ -17,15 +17,15 @@
 		<div class="map-tab_panels">
 			<div class="container">
 				<ul>
-					<li data-panel="lives_improved" class="datafilter active-tab" onclick="objDataFilter.changedatasource('lives_improved')">
+					<li id="tab_lives_improved" data-panel="lives_improved" class="datafilter active-tab" onclick="objDataFilter.changedatasource('lives_improved')">
 						[lives_improved]
 					</li>
-					<li data-panel="global_presence" class="datafilter" onclick="objDataFilter.changedatasource('global_presence')">
+					<li id="tab_global_presence" data-panel="global_presence" class="datafilter" onclick="objDataFilter.changedatasource('global_presence')">
 						[global_presence]
 						<div class="subtypeindicator">[all_data]</div>
 						<div class="datatype-filter"></div>
 					</li>
-					<li data-panel="sustainability" class="datafilter" onclick="objDataFilter.changedatasource('sustainability')">
+					<li id="tab_sustainability" data-panel="sustainability" class="datafilter" onclick="objDataFilter.changedatasource('sustainability')">
 						[sustainability]
 						<div class="subtypeindicator">[all_data]</div>
 						<div class="datatype-filter"></div>
