Improvements for "date-labels" and for the footnote and references

--- a/html/data/body_content.html
+++ b/html/data/body_content.html
@@ -232,13 +232,13 @@
 
 						</div>
 						<div class="data-wrapper" id="sustainability_details">
-							<div id="value_trc" class="nr_label"><span class="label">[lwc_rate]</span><span class="footnote"><sup>*</sup></span><span class="nr_trc nr"></span></div>
-							<div id="value_co2" class="nr_label"><span class="label">[c_o_2]</span><span class="footnote"><sup>*</sup></span><span class="nr_co2 nr"></span></div>
+							<div id="value_trc" class="nr_label"><span class="label">[lwc_rate]</span><span class="nr_trc nr"></span></div>
+							<div id="value_co2" class="nr_label"><span class="label">[c_o_2]</span><span class="nr_co2 nr"></span></div>
 							<div id="value_waste" class="nr_label"><span class="label">[waste]</span><span class="nr_waste nr"></span></div>
 							<div id="value_wasterecycled" class="nr_label"><span class="label">[recycled]</span><span class="nr_wasterecycled nr"></span></div>
 							<div id="value_water" class="nr_label"><span class="label">[water]</span><span class="nr_water nr"></span></div>
-							<div id="value_emissionshaz" class="nr_label"><span class="label">[emissionshaz]</span><span class="nr_emissionhaz nr"></span></div>
-							<div id="value_emissions" class="nr_label"><span class="label">[emissions]</span><span class="nr_emission nr"></span></div>
+							<div id="value_emissionshaz" class="nr_label"><span class="label">[emissionshaz]</span><span class="footnote"><sup>*</sup></span><span class="nr_emissionhaz nr"></span></div>
+							<div id="value_emissions" class="nr_label"><span class="label">[emissions]</span><span class="footnote"><sup>*</sup></span><span class="nr_emission nr"></span></div>
                             <div class="footnote"><sup>*</sup><span id="sustainability_footnote"></span></div>
 						</div>
 					</div>
