Website picks up the correct CSS file (minified or not)

--- a/html/dev.html
+++ b/html/dev.html
@@ -17,7 +17,7 @@
     <![endif]-->
 
     <!-- Load the CSS and JS Resources -->
-    <script type="text/javascript" src="dist/js/load.js">//</script>
+    <script type="text/javascript" src="dist/js/load.js?v=2">//</script>
     <script type="text/javascript">
         loadJavaScriptResources([
             '/js/lib/svg_zoom_homegrown_v2.js',
