Fixes required to have the Lives Improved worldmap running inside a subdirectory for the Mandarin website

--- a/html/data/body_content.html
+++ b/html/data/body_content.html
@@ -60,7 +60,7 @@
 				<div class="container">
 					<div class="map_tools__legend">
 						<h4 class="map_tools__legend__title">[lives_improved]</h4>
-						<span class="map_tools__legend__subtitle">% [of_total_population]</span>
+						<!-- <span class="map_tools__legend__subtitle">% [of_total_population]</span> -->
 						<ul class="map_tools__legend--values">
 							<li class="map_tools__legend__top_value">[high]</li>
 							<li class="map_tools__legend__low_value">[low]</li>
